券支持跨天适用时间/单笔账单可用限制提测

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -1208,7 +1208,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 5px;
-
+    width: 640px;
     .tipBlock {
         display: flex;
         justify-content: space-between;
@@ -1219,7 +1219,7 @@
     .timePickerWrapper {
         display: flex;
         justify-content: space-between;
-        width: 60%;
+        width: 270px;
         margin-right: 5px;
     }
 
