三方券查询方式

--- a/src/containers/ThirdCoupon/AlipayCoupon.less
+++ b/src/containers/ThirdCoupon/AlipayCoupon.less
@@ -370,6 +370,15 @@
 
 // 第三方券管理
 .CouponManageListBox {
+    .restUl {
+        >li {
+            line-height: 28px;
+            float: left;
+            margin-right: 10px;
+            height: 28px;
+            margin-bottom: 10px;
+        }
+    }
     .pageContentWrapper {
         background-color: #FFFFFF;
         padding: 0 20px;
