--- a/src/containers/SpecialPromotionNEW/common/addGifts.less
+++ b/src/containers/SpecialPromotionNEW/common/addGifts.less
@@ -110,6 +110,15 @@
         cursor: pointer;
     }
 }
+.pointBoxNew {
+    position: relative;
+    width: 583px;
+    // max-height: 108px;
+    margin-left: 62px;
+    background: #F9F9F9;
+    border-radius: 4px;
+    padding: 14px 0;
+}
 .pointBox{
     background: #fdf4ed;
     border-radius: 3px;
