推荐有礼装修优化

--- a/src/containers/PromotionDecoration/style.less
+++ b/src/containers/PromotionDecoration/style.less
@@ -138,6 +138,15 @@
         top: 0;
         left: -150px;
     }
+    .subLabel {
+        width: 100px;
+        position: absolute;
+        text-align: right;
+        top: 20px;
+        left: -143px;
+        color: #999999;
+        font-size: 12px;
+    }
 }
 
 .uploaderWrapper {
