--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -312,10 +312,9 @@
     }
 }
 
-.upsideDown i {
+.upsideDown{
     position: relative;
-    top: 3px;
-    transform: rotate(180deg);
+    top: -5px;
 }
 
 .radioMargin {
