--- a/src/containers/LanchChannel/style.less
+++ b/src/containers/LanchChannel/style.less
@@ -2,28 +2,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 400;
-    color: rgba(102, 102, 102, 1);
-    height: 60px;
+    color: #595959;
+    height: 50px;
     padding: 0 20px;
-
-    .titleArea {
-        display: flex;
-        align-items: center;
-
-        .subTitle {
-            font-size: 12px;
-            color: #999;
-            margin-left: 8px;
-        }
-
-        :global {
-            .ant-alert {
-                margin-bottom: 0 !important;
-            }
-        }
-    }
 }
 
 .headerActions {
@@ -44,26 +27,49 @@
 }
 
 .groupWrapper {
-    width: 300px;
-    margin-right: 50px;
-    border: 1px solid #aaa;
-    border-bottom: none;
+    width: 200px;
+    margin-right: 20px;
+    border: 1px solid #E9E9E9;
+    border-radius: 4px;
+    padding-top: 4px;
+    height: 100%;
     .addButton {
-        height: 50px;
-        line-height: 50px;
-        text-align: center;
-        border-bottom: 1px solid #aaa;
+        padding: 0px 9px;
+        height: 36px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        &.active{
+            background-color: #12B493;
+            color: #fff;
+        }
+        .totalItem{
+            .totalIcon{
+                margin-right: 6px;
+                transform: scale(0.6);
+            }
+            .totalText{
+                font-size: 12px;
+                font-weight: 500;
+            }
+        }
     }
     .groupList {
         .groupItem {
-            text-align: center;
-            position: relative;
+            cursor: pointer;
+            padding: 0 9px 0 36px;
+            font-size: 12px;
+            color: #666;
             height: 36px;
-            line-height: 36px;
-            border-bottom: 1px solid #aaa;
-            .groupOperation {
-                position: absolute;
-                right: 5px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            &:hover{
+                background: rgb(219,245,239);
+            }
+            &.active{
+                background-color: #12B493;
+                color: #fff;
             }
         }
     }
