--- a/src/containers/LanchChannel/style.less
+++ b/src/containers/LanchChannel/style.less
@@ -29,7 +29,7 @@
 .groupWrapper {
     width: 200px;
     margin-right: 20px;
-    border: 1px solid #E9E9E9;
+    border: 1px solid #e9e9e9;
     border-radius: 4px;
     padding-top: 4px;
     height: 100%;
@@ -39,16 +39,16 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        &.active{
-            background-color: #12B493;
+        &.active {
+            background-color: #12b493;
             color: #fff;
         }
-        .totalItem{
-            .totalIcon{
+        .totalItem {
+            .totalIcon {
                 margin-right: 6px;
                 transform: scale(0.6);
             }
-            .totalText{
+            .totalText {
                 font-size: 12px;
                 font-weight: 500;
             }
@@ -64,13 +64,22 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            &:hover{
-                background: rgb(219,245,239);
+            &:hover {
+                background: rgb(219, 245, 239);
             }
-            &.active{
-                background-color: #12B493;
+            &.active {
+                background-color: #12b493;
                 color: #fff;
             }
+        }
+    }
+}
+
+.tableClass {
+    :global {
+        .ant-table-pagination {
+            position: fixed;
+            bottom: 8px;
         }
     }
 }
