--- a/src/containers/SpecialPromotionNEW/MySpecialActivities/mySpecialActivities.less
+++ b/src/containers/SpecialPromotionNEW/MySpecialActivities/mySpecialActivities.less
@@ -29,7 +29,7 @@
                 width: 100%;
                 height: 50px;
                 display: flex;
-                justify-content: center;
+                // justify-content: center;
                 align-items: center;
                 .urlText {
                     width: 300px;
