--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -312,9 +312,10 @@
     }
 }
 
-.upsideDown{
+.upsideDown i{
     position: relative;
-    top: -5px;
+    top: 11px;
+    transform: rotate(180deg);
 }
 
 .radioMargin {
