打折-第二份打折-买减-折扣优化

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -1169,6 +1169,7 @@
         position: absolute;
         right: 55px;
         top: 8px;
+        cursor: pointer;
 
         &:hover {
             color: #18a786;
@@ -1177,6 +1178,7 @@
     }
 
     .deleteIcon {
+        cursor: pointer;
         font-size: 22px;
         color: #de2b2b;
         position: absolute;
@@ -1225,6 +1227,7 @@
     .deleteIcon {
         color: #de2b2b;
         font-size: 22px;
+        cursor: pointer;
 
         &:hover {
             color: #d21616;
@@ -1235,6 +1238,7 @@
     .plusIcon {
         color: #1ab495;
         font-size: 22px;
+        cursor: pointer;
 
         &:hover {
             color: #18a786;
@@ -1246,7 +1250,8 @@
 .deleteIcon {
     color: #de2b2b;
     font-size: 22px;
-
+    cursor: pointer;
+    
     &:hover {
         color: #d21616;
         cursor: pointer;
@@ -1256,6 +1261,7 @@
 .plusIcon {
     color: #1ab495;
     font-size: 22px;
+    cursor: pointer;
 
     &:hover {
         color: #18a786;
