--- a/src/containers/SaleCenterNEW/nDiscount/NDiscount.less
+++ b/src/containers/SaleCenterNEW/nDiscount/NDiscount.less
@@ -8,6 +8,8 @@
             position: absolute;
             right: -30px;
             top:3px;
+            cursor: pointer;
+
             :hover{
                 color:#18a786;
             }
@@ -18,6 +20,8 @@
             position: absolute;
             right: -60px;
             top:3px;
+            cursor: pointer;
+            
             :hover{
                 color:#d21616;
             }
