兼容折扣input的样式和折扣参数的转换

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -1167,7 +1167,8 @@
         font-size: 22px;
         color: #1ab495;
         position: absolute;
-        right: 55px;
+        // right: 55px;
+        right: 26px;
         top: 8px;
         cursor: pointer;
 
@@ -1182,7 +1183,8 @@
         font-size: 22px;
         color: #de2b2b;
         position: absolute;
-        right: 28px;
+        // right: 28px;
+        right: 0;
         top: 8px;
 
         &:hover {
@@ -1196,6 +1198,7 @@
         color: #de2b2b;
         position: absolute;
         right: 55px;
+        right: 26px;
         top: 8px;
 
         &:hover {
