--- a/src/containers/ThirdCoupon/AlipayCoupon.less
+++ b/src/containers/ThirdCoupon/AlipayCoupon.less
@@ -492,8 +492,8 @@
 }
 
 .createCouponModal__flex__ul {
-    display: flex;
-    justify-content: space-around;
+    // display: flex;
+    // justify-content: space-around;
     .createCouponModal__item__li {
         img  {
             display: inline-block;
@@ -505,8 +505,10 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        float: left;
         width: 148px;
         height: 148px;
+        margin-left: 10px;
         background: #FFFFFF;
         box-shadow: 0px 2px 12px 0px rgba(218, 218, 218, 0.5);
         border-radius: 12px;
