--- a/src/containers/DistributionAdmin/Admin/style.less
+++ b/src/containers/DistributionAdmin/Admin/style.less
@@ -1,22 +1,45 @@
-.rebateWithdrawRuleRadioGroup {
+.admin {
+    .rectBox {
+        width: 434px;
+        height: 80px;
+    }
 
-    .rebateWithdrawRuleRadio {
-        display: flex;
-        align-items: center;
+    .questionIcon {
+        font-size: 13px;
+        cursor: pointer;
     }
 
     :global {
-        .ant-radio-wrapper {
+        .ant-form-item-control  {
             display: flex;
             align-items: center;
+        }
 
-            .ant-input-group-addon:nth-child(1) {
-                border: 0;
-            }
+        .ant-input-group{
+            width: 150px;
+            display: flex;
+            align-items: center;
+        }
 
-            span:nth-child(2) {
+        .ant-input-group-addon {
+            width: 31px;
+            background: #F5F5F5;
+            height: 28px;
+            display: flex;
+            align-items: center;
+        }
+    }
+
+    .rebateWithdrawRuleRadioGroup {
+        :global {
+            .ant-radio-wrapper {
                 display: flex;
                 align-items: center;
+
+                span:nth-child(2) {
+                    display: flex;
+                    align-items: center;
+                }
             }
         }
     }
