--- a/src/components/basic/ProgressBar/ProgressBar.less
+++ b/src/components/basic/ProgressBar/ProgressBar.less
@@ -88,3 +88,59 @@
 .ProgressBarPro{
 	.commonProgressBar(#379ff1, #87C5F7)
 }
+
+.upperLimitModal {
+	:global {
+		.ant-modal-content {
+			padding: 0 0 30px;
+			top: 50px;
+			border-radius: 8px;
+		}
+		.ant-modal-header {
+			border-radius: 8px 8px 0 0;
+		}
+		.ant-modal-body {
+			margin-top: -24px;
+			padding: 0 30px;
+			> div {
+			font-size: 16px;
+			color: #333333;
+			margin-bottom: 16px;
+			}
+			span {
+				display: inline-block;
+				width: 80px;
+				overflow: hidden;
+				white-space: nowrap;
+				text-overflow: ellipsis;
+				vertical-align: bottom;
+			}
+			b {
+				font-weight: normal;
+			}
+			> p {
+				color: #666;
+				font-size: 14px;
+			}
+			.ant-table-tbody {
+				span {
+					width: 0;
+				}
+			}
+			// .p__centerBox {
+			// 	margin: 10px 14px;
+			// }
+		}
+		.countNumber {
+			width: 200px;
+
+		}
+
+		.ant-modal-title {
+			>div {
+				position: relative;
+				top: -47px;
+			}
+		}
+	}
+}
