增加优先券

--- a/src/containers/GiftNew/GiftAdd/Crm.less
+++ b/src/containers/GiftNew/GiftAdd/Crm.less
@@ -326,6 +326,7 @@
 @newPurple: #9372C1;
 @defaultGreen: #1BB494;
 @newBlue2: #65D8E6;
+@newPurple2: #e27a82;
 
 .primaryLogoContainer(@color: @defaultGreen) {
     cursor: pointer;
@@ -625,6 +626,10 @@
 
 .logoContainer_5 {
     .primaryLogoContainer(@newBlue2)
+}
+
+.logoContainer_6 {
+    .primaryLogoContainer(@newPurple2)
 }
 
 .groupContainer {
