--- a/src/containers/AutomatedSale/Main/style.less
+++ b/src/containers/AutomatedSale/Main/style.less
@@ -11,9 +11,11 @@
 }
 
 .automatedSale {
+    padding: 14px 20px;
+
     .queryFrom {
         display: flex;
-        padding: 14px 20px;
+        margin: 20px 0;
     }
 
     .tableBox {
