--- a/src/containers/SaleCenterNEW/nDiscount/NDiscount.less
+++ b/src/containers/SaleCenterNEW/nDiscount/NDiscount.less
@@ -31,4 +31,17 @@
         }
 
     }
+
+    .FormItemBox {
+        :global {
+            .ant-select-selection__rendered {
+                display: flex;
+                justify-content: center;
+            }
+
+            .ant-input-group-addon .ant-select {
+                margin: -5px 0px;
+            }
+        }
+    }
 }
