选择店铺弹窗-添加虚拟列表

--- a/src/components/common/CheckboxList/styles.less
+++ b/src/components/common/CheckboxList/styles.less
@@ -101,3 +101,13 @@
         }
     }
 }
+
+.virtualizedListBox {
+    width: 100% !important;
+
+    :global {
+        .ReactVirtualized__Grid__innerScrollContainer {
+            max-width: 100% !important;
+        }
+    }
+}
