选择店铺-列表优化

--- a/src/components/common/CheckboxList/styles.less
+++ b/src/components/common/CheckboxList/styles.less
@@ -103,11 +103,11 @@
 }
 
 .virtualizedListBox {
-    // width: 100% !important;
+    width: 100% !important;
 
-    // :global {
-    //     .ReactVirtualized__Grid__innerScrollContainer {
-    //         max-width: 100% !important;
-    //     }
-    // }
+    :global {
+        .ReactVirtualized__Grid__innerScrollContainer {
+            max-width: 100% !important;
+        }
+    }
 }
