批量生成券码-增加发出店铺

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -312,6 +312,19 @@
     }
 }
 
+.showHighConfig {
+    color: #1ca1dc;
+    :global{
+        .ant-checkbox-wrapper{
+            margin-right: 0;
+            color: #1ca1dc;
+        }
+        .ant-checkbox{
+            display: none;
+        }
+    }
+}
+
 .upsideDown i{
     position: relative;
     top: 11px;
