--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -2744,15 +2744,10 @@
 }
 
 .generateBatchGiftsHeader {
-    background-color: #f5f5f5;
-    border: 1px solid #e3e3e3;
-    margin: 5px 0;
-    border-radius: 3px;
-    height: 75px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 1em;
+    padding: 0 1em 20px;
 }
 
 .qrModalTitCon {
