千人千面暂存

--- a/src/containers/SaleActives/CreateActive.less
+++ b/src/containers/SaleActives/CreateActive.less
@@ -138,3 +138,23 @@
         color: #12B493;
     }
 }
+.createActiveTwo {
+    width: 100%;
+    height: 100%;
+    .headers {
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-left: 20px;
+        margin-right: 8px;
+        > p {
+            padding-right: 8px;
+        }
+    }
+    .centerLine {
+        height: ~'calc(100vh - 70px)';
+        width: 1px;
+        background:  #979797;
+    }
+} 
