权益卡活动在营销活动管理可见

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -2990,9 +2990,13 @@
                 top: 0px;
             }
             .ant-switch-inner{
-                left: 5px;               
+                // left: 5px;      
+                left: 3px;
+                border-radius: 8px;
+                top: 1px;
+                line-height: 22px;         
              }
-        }
+            }
     }
 }
 
