--- a/src/containers/SpecialPromotionNEW/MySpecialActivities/mySpecialActivities.less
+++ b/src/containers/SpecialPromotionNEW/MySpecialActivities/mySpecialActivities.less
@@ -146,7 +146,7 @@
         position: relative;
         // float: left;
         width: 382px;
-        height: 220px;
+        height: 249px;
         margin-right: 24px;
         margin-bottom: 24px;
         box-sizing: border-box;
@@ -221,15 +221,15 @@
                 display: flex;
                 align-items: center;
                 &:last-child {
-                    margin-top: 10px;
+                    margin-top: 0px;
                 }
                 line-height: 14px;
+                margin-bottom: 10px;
                 span {
                     display: inline-block;
                     color: #999999;
                     min-width: 88px;
-                font-size: 12px;
-
+                    font-size: 12px;
                     white-space: nowrap;
                     overflow: hidden;
                     text-overflow: ellipsis;
