--- a/src/containers/SaleActives/CreateActive.less
+++ b/src/containers/SaleActives/CreateActive.less
@@ -156,5 +156,29 @@
         height: ~'calc(100vh - 70px)';
         width: 1px;
         background:  #979797;
+        position: relative;
+        .arrow {
+            position: absolute;
+            width: 0;
+            height: 0;
+            border: 10px solid transparent;
+            border-left: none;
+            border-right-color: #979797;
+            right: 0;
+            top: 200px;
+            &::after {
+                width: 0;
+                height: 0;
+                display: block;
+                position: absolute;
+                content: '';
+                top: 201px;
+                right: -1px;
+                border: 9px solid transparent;
+                border-left: none;
+                border-right-color: #FFFFFF;
+            }
+        }
+      
     }
 } 
