--- a/src/containers/SaleActives/ManyFace/ManyFace.less
+++ b/src/containers/SaleActives/ManyFace/ManyFace.less
@@ -8,3 +8,28 @@
 .useRule {
   position: relative;
 }
+
+.logoGroupHeader {
+  width: 674px;
+  height: 28px;
+  line-height: 28px;
+  background: #F5FBFA;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  color: #666;
+  position: relative;
+  left: -77px;
+  padding-left: 12px;
+  &::before {
+    content: '';
+    margin-left: -7px;
+    position: absolute;
+    display: block;
+    width: 3px;
+    height: 12px;
+    left: 8px;
+    top: 8px;
+    background-color: #18B495;
+  }
+}
