千人千面编辑回显

--- a/src/containers/SaleActives/ManyFace/ManyFace.less
+++ b/src/containers/SaleActives/ManyFace/ManyFace.less
@@ -33,3 +33,14 @@
     background-color: #18B495;
   }
 }
+
+.activeTipBox {
+  font-size: 14px;
+  font-weight: 400;
+  color: #666666;
+  // line-height: 22px;
+  span {
+    color: #12B493 !important;
+    cursor: pointer;
+  }
+}
