--- a/src/containers/SaleActives/ManyFace/ManyFace.less
+++ b/src/containers/SaleActives/ManyFace/ManyFace.less
@@ -44,3 +44,18 @@
     cursor: pointer;
   }
 }
+.viewRuleVisibleModal {
+  font-size: 12px;
+  color: #666666;
+  .ruleModalTitle {
+    margin-bottom: 15px;
+  }
+  .name {
+    font-size: 16px;
+    color: #333;
+    margin-right:8px;
+  }
+  .computeRule {
+    margin-right: 10px;
+  }
+}
