--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -3406,3 +3406,19 @@
         background: #4ca2ee;
     }
 }
+
+.viewRuleVisibleModal {
+    font-size: 12px;
+    color: #666666;
+    .ruleModalTitle {
+      margin-bottom: 15px;
+    }
+    .name {
+      font-size: 16px;
+      color: #333;
+      margin-right:8px;
+    }
+    .computeRule {
+      margin-right: 10px;
+    }
+  }
