--- a/src/components/common/EditableTags/EditableTags.less
+++ b/src/components/common/EditableTags/EditableTags.less
@@ -14,6 +14,9 @@
         .item {
             margin: 3px;
         }
+        .active {
+            background: yellow;
+        }
     }
 
     & > :global(.anticon) {
