--- a/src/containers/SaleActives/ManyFace/MyFaceRule/styles.less
+++ b/src/containers/SaleActives/ManyFace/MyFaceRule/styles.less
@@ -6,7 +6,7 @@
       position: relative;
       width: 515px;
       min-height: 130px;
-      padding: 0 20px;
+      padding: 0 20px 14px;
       background: #f9f9f9;
       border-radius: 3px;
       border: 1px solid #E7E7E7;
@@ -35,8 +35,13 @@
       flex: none;
     }
     .tip {
-      color: #FF221F;
+      display: inline-block;
+      margin-right: 4px;
+      content: "*";
+      font-family: SimSun;
+      line-height: 1;
       font-size: 12px;
+      color: #f04134;
     }
     .jumpAppBox {
       margin-left: 10px;
