--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -2954,7 +2954,9 @@
         // .ant-switch {
             // background: red;
             .ant-switch-inner {
-                top: -3px;
+                border-radius: 6px;
+                top: 0;
+                line-height: 23px;
                 left: 25px;
             }
         // }
