fix-新建券-title样式

--- a/src/containers/GiftNew/GiftAdd/Crm.less
+++ b/src/containers/GiftNew/GiftAdd/Crm.less
@@ -682,7 +682,7 @@
     font-size: 14px;
     color: #666;
     position: relative;
-    left: -77px;
+    left: 0;
     padding-left: 12px;
 
     &::before {
