--- a/src/containers/SaleActives/ManyFace/ManyFace.less
+++ b/src/containers/SaleActives/ManyFace/ManyFace.less
@@ -38,9 +38,13 @@
   font-size: 14px;
   font-weight: 400;
   color: #666666;
-  // line-height: 22px;
-  span {
-    color: #12B493 !important;
+  .eventNameTip {
+    color: #333;
+    font-weight: 400;
+    cursor: auto;
+  }
+  .viewRuleTip {
+    color: #12B493;
     cursor: pointer;
   }
 }
