--- a/src/containers/SaleActives/ManyFace/style.less
+++ b/src/containers/SaleActives/ManyFace/style.less
@@ -81,6 +81,7 @@
     border: 1px solid #f3f3f3;
 }
 .step1{
+    max-width: 800px;
     :global{
         .ant-form-item {
         }
@@ -88,6 +89,7 @@
 }
 .useRule {
     position: relative;
+    max-width: 800px;
 }
 
 // // step3
