--- a/src/containers/SaleActives/components/ImageUploader/style.less
+++ b/src/containers/SaleActives/components/ImageUploader/style.less
@@ -39,5 +39,9 @@
   width: 96px;
   height: 96px;
   text-align: center;
-  padding-top: 30px;
+  padding-top: 28px;
+  .uploadText {
+    position: relative;
+    top: -6px;
+  }
 }
