fix：推荐有礼增加新的活动规则

--- a/src/containers/SpecialPromotionNEW/recommendGifts/recommentGift.less
+++ b/src/containers/SpecialPromotionNEW/recommendGifts/recommentGift.less
@@ -53,6 +53,11 @@
     .tabs {
         margin-left: 44px;
         padding-bottom: 20px;
+        :global {
+            .ant-tabs-nav-scroll {
+                overflow: scroll;
+            }
+        }
     }
     .formItemStyle {
         display: flex;
