签到活动页面显示问题

--- a/src/containers/SaleCenterNEW/returnGift/style.less
+++ b/src/containers/SaleCenterNEW/returnGift/style.less
@@ -7,10 +7,10 @@
         position: absolute;
         height: 22px;
         line-height: 22px;
-        background:rgba(245,164,100,1);
+        background: rgba(245, 164, 100, 1);
         top: 6px;
         left: -1px;
-        border-radius:0px 11px 11px 0px;
+        border-radius: 0px 11px 11px 0px;
         padding: 0 8px;
         min-width: 50px;
         color: #fff;
@@ -18,7 +18,7 @@
     }
     .removeButton {
         position: absolute;
-        color: #AAAAAA;
+        color: #aaaaaa;
         top: 8px;
         right: 8px;
         font-size: 20px;
@@ -34,17 +34,17 @@
     margin: 0 0 12px 12px;
     height: 24px;
     line-height: 24px;
-    color: #3FB394;
+    color: #3fb394;
     cursor: pointer;
 }
 :global(.professional) {
     .addLink {
-        color:#379ff1;
+        color: #379ff1;
     }
 }
 .listWrapper {
-    border:1px solid rgba(217,217,217,1);
-    border-radius:3px;
+    border: 1px solid rgba(217, 217, 217, 1);
+    border-radius: 3px;
     margin-bottom: 10px;
 }
 .isNotMultiple {
@@ -57,12 +57,12 @@
     justify-content: space-between;
 }
 .grayHeader {
-    background:rgba(248,248,248,1);
-    border-bottom: 1px solid rgba(217,217,217,1);
+    background: rgba(248, 248, 248, 1);
+    border-bottom: 1px solid rgba(217, 217, 217, 1);
     padding: 0 12px;
     display: flex;
     line-height: 40px;
-    border: 1px solid rgba(217,217,217,1);
+    border: 1px solid rgba(217, 217, 217, 1);
     border-bottom: none;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
@@ -84,18 +84,20 @@
     padding-top: 12px;
 }
 .deleteIcon {
-    color:#de2b2b;
+    margin-left: 5px;
+    color: #de2b2b;
     font-size: 22px;
-    &:hover{
-        color:#d21616;
+    &:hover {
+        color: #d21616;
         cursor: pointer;
     }
 }
 .plusIcon {
-    color:#1ab495;
+    margin-left: 5px;
+    color: #1ab495;
     font-size: 22px;
-    &:hover{
-        color:#18a786;
+    &:hover {
+        color: #18a786;
         cursor: pointer;
     }
 }
