分销管理-增加字段

--- a/src/containers/DistributionAdmin/Admin/style.less
+++ b/src/containers/DistributionAdmin/Admin/style.less
@@ -69,6 +69,14 @@
             display: flex;
             justify-content: center;
             align-items: center;
+
+            :global {
+                .ant-upload-list-item {
+                    width: 100%;
+                    height: 730px;
+                    border: 0;
+                }
+            }
         }
 
         .rightDesc {
