礼品列表-添加导出

--- a/src/containers/GiftNew/GiftInfo/GiftInfo.less
+++ b/src/containers/GiftNew/GiftInfo/GiftInfo.less
@@ -367,13 +367,27 @@
 .popDiv {
     width: 126px;
 }
+
 .tabBox{
+    position: relative;
+
     :global{
         .ant-tabs-bar{
             margin-bottom: 0;
         }
         .ant-tabs-nav-container{
             background: @white;
+        }
+    }
+
+    .rightBtnBox {
+        position: absolute;
+        top: 8px;
+        right: 24px;
+        z-index: 9;
+    
+        button {
+            margin-right: 10px;
         }
     }
 }
