--- a/src/containers/GiftNew/GiftInfo/TicketBag/index.less
+++ b/src/containers/GiftNew/GiftInfo/TicketBag/index.less
@@ -220,6 +220,10 @@
         position: absolute;
         right: 20px;
         top: -62px;
+        
+        button {
+            margin-right: 10px;
+        }
     }
 }
 .tableBox{
