--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -2515,6 +2515,12 @@
             line-height: 35px;
         }
     }
+
+    .rightBtnBox {
+        position: absolute;
+        top: 8px;
+        right: 20px;
+    }
 }
 
 .tableClass {
