feat：线上餐厅弹窗送礼增加新页面

--- a/src/containers/SaleActives/CreateActive.less
+++ b/src/containers/SaleActives/CreateActive.less
@@ -154,8 +154,8 @@
     }
     .centerLine {
         height: ~'calc(100vh - 70px)';
-        width: 1px;
-        background:  #979797;
+        width: 2px;
+        background: rgb(222,222,222);
         position: relative;
         .arrow {
             position: absolute;
@@ -163,7 +163,7 @@
             height: 0;
             border: 10px solid transparent;
             border-left: none;
-            border-right-color: #979797;
+            border-right-color: rgb(205,205,205);
             right: 0;
             top: 200px;
             &::after {
