--- a/src/containers/SaleActives/components/PhonePreview/styles.less
+++ b/src/containers/SaleActives/components/PhonePreview/styles.less
@@ -5,7 +5,6 @@
   margin: 0 56px;
   // border-right: 1px solid #D7D7D7;
   .bannerImg {
-    margin-top: 26px;
     @total-height: 374px;
     @img-height: 99px;
     position: relative;
@@ -72,6 +71,7 @@
     display: flex;
     align-items: center;
     height: 21px;
+    margin-bottom: 26px;
   }
   .platformTitle {
     padding: 0 8px 0 16px;
