feat: 增加礼品信息组件

--- a/src/containers/SaleActives/OnlineRestaurantGiftGiving/styles.less
+++ b/src/containers/SaleActives/OnlineRestaurantGiftGiving/styles.less
@@ -25,3 +25,12 @@
         }
     }
 }
+
+.WxCouponTable {
+    :global {
+        .ant-table {
+            width: 100%;
+            margin-top: 15px;
+        }
+    }
+}
