--- a/src/containers/SaleActives/OnlineRestaurantGiftGiving/styles.less
+++ b/src/containers/SaleActives/OnlineRestaurantGiftGiving/styles.less
@@ -34,3 +34,34 @@
         }
     }
 }
+
+.viewRuleVisibleModal {
+  font-size: 12px;
+  color: #666666;
+  .ruleModalTitle {
+    margin-bottom: 15px;
+  }
+  .name {
+    font-size: 16px;
+    color: #333;
+    margin-right:8px;
+  }
+  .computeRule {
+    margin-right: 10px;
+  }
+}
+
+.activeTipBox {
+  font-size: 14px;
+  font-weight: 400;
+  color: #666666;
+  .eventNameTip {
+    color: #333;
+    font-weight: 400;
+    cursor: auto;
+  }
+  .viewRuleTip {
+    color: #12B493;
+    cursor: pointer;
+  }
+}
