--- a/src/containers/SaleActives/NewPromotionCardPages/components/addGifts.less
+++ b/src/containers/SaleActives/NewPromotionCardPages/components/addGifts.less
@@ -80,6 +80,7 @@
     padding-top: 34px;
     padding-bottom: 20px;
     margin-bottom: 10px;
+    padding-right: 18px;
 
     .title {
       position: absolute;
