fix: 调整滚动样式

--- a/src/containers/SaleActives/OnlineRestaurantGiftGiving/styles.less
+++ b/src/containers/SaleActives/OnlineRestaurantGiftGiving/styles.less
@@ -1,7 +1,8 @@
 .formContainer {
     overflow: auto;
-    min-width: 700px;
-    width: 100%;
+    // min-width: 700px;
+    // width: 100%;
+    flex: 1;
     .logoGroupHeader {
         padding-left: 11px;
         height: 28px;
