fix：查看活动增加禁止输入

--- a/src/containers/SaleActives/OnlineRestaurantGiftGiving/styles.less
+++ b/src/containers/SaleActives/OnlineRestaurantGiftGiving/styles.less
@@ -3,6 +3,14 @@
     // min-width: 700px;
     // width: 100%;
     flex: 1;
+    position: relative;
+    .stepOneDisabled{
+        position: absolute;
+        width: 100%;
+        min-height: 1100px;
+        z-index: 100;
+        cursor: not-allowed;
+    }
     .logoGroupHeader {
         padding-left: 11px;
         height: 28px;
