--- a/src/containers/SaleActives/NewPromotionCardPages/components/style.less
+++ b/src/containers/SaleActives/NewPromotionCardPages/components/style.less
@@ -89,3 +89,14 @@
         }
     }
 }
+
+.NoShareBenifit {
+    :global {
+        .ant-form-item-control-wrapper {}
+
+        .ant-spin-nested-loading {
+            width: 401px;
+            margin-left: 15px;
+        }
+    }
+}
