--- a/src/containers/SaleActives/NewPromotionCardPages/components/style.less
+++ b/src/containers/SaleActives/NewPromotionCardPages/components/style.less
@@ -92,11 +92,18 @@
 
 .NoShareBenifit {
     :global {
-        .ant-form-item-control-wrapper {}
-
         .ant-spin-nested-loading {
             width: 401px;
             margin-left: 15px;
+        }
+    }
+}
+
+.cardScopeTypeBox {
+    :global {
+        .ant-form-item-label {
+            margin-right: 17px;
+            overflow: visible !important;
         }
     }
 }
