--- a/src/containers/GiftNew/GiftInfo/TicketBag/index.less
+++ b/src/containers/GiftNew/GiftInfo/TicketBag/index.less
@@ -264,3 +264,20 @@
         color: #f04134;
     }
 }
+
+.couponWarningBox {
+    .label {
+        margin-bottom: 10px;
+        .title {
+            margin-bottom: 10px;
+        }
+
+        .content {
+            background: rgb(254, 241, 233);
+            padding: 0 5px;
+            .contentItem {
+
+            }
+        }
+    }
+}
