--- a/src/containers/SaleActives/NewPromotionCardPages/components/addGifts.less
+++ b/src/containers/SaleActives/NewPromotionCardPages/components/addGifts.less
@@ -1,5 +1,11 @@
 .conditionListBox {
     position: relative;
+    .couponBox {
+        margin-top: -6px;
+        > a {
+            margin-left: 8px;
+        }
+    }
 
     .conditionListBoxPop {
         width: 100%;
