--- a/src/containers/AutomatedSale/Main/style.less
+++ b/src/containers/AutomatedSale/Main/style.less
@@ -12,32 +12,65 @@
 
 .automatedSale {
     padding: 14px 20px;
+    // background: #F5F5F5;
 
     .queryFrom {
         display: flex;
         margin: 20px 0;
     }
 
-    .statusPanels {
-        ul {
-            display: flex;
-            align-items: center;
-            justify-content: space-around;
+    .statusPanelsTable {
+        padding: 20px 20px 0;
+        background: #F5F5F5;
 
-            li {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
+        .statusPanelsTableMain {
+            background: #FFFFFF;
+            border-radius: 10px;
+            padding-left: 20px;
 
-                .label {
-                    font-size: 14px;
-                }
+            .statusPanels {
+                ul {
+                    display: flex;
+                    align-items: center;
+                    justify-content: flex-start;
 
-                .value {
-                    font-size: 18px;
-                    font-weight: bolder;
-                    margin-top: 10px;
-                    margin-bottom: 10px;
+                    li {
+                        padding-top: 17px;
+                        width: 165px;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        cursor: pointer;
+                        border-top: 4px solid #FFFFFF;
+                        box-sizing: border-box;
+
+                        &.active {
+                            border-top: 4px solid #1AB495;
+                        }
+
+                        &:hover {
+                            border-top: 4px solid #1AB495;
+                        }
+
+                        .label {
+                            font-size: 14px;
+                            display: flex;
+                            align-items: center;
+
+                            img {
+                                width: 16px;
+                                height: 16px;
+                                margin-right: 10px;
+                            }
+                        }
+
+                        .value {
+                            font-size: 18px;
+                            font-weight: bolder;
+                            margin-top: 10px;
+                            margin-bottom: 10px;
+                        }
+                    }
                 }
             }
         }
