--- a/src/containers/SaleActives/SeckillInLimitedTime/AddSeckillGoods/styles.less
+++ b/src/containers/SaleActives/SeckillInLimitedTime/AddSeckillGoods/styles.less
@@ -2,7 +2,7 @@
     display: flex;
     margin-bottom: 16px;
     .addGiftsConntet {
-        width: 500px;
+        width: 480px;
         position: relative;
         padding: 0 20px 14px;
         background: #f9f9f9;
@@ -12,8 +12,8 @@
         > span {
             display: inline-block;
             position: absolute;
-            top: 0;
-            left: 0;
+            top: 23px;
+            left: 21px;
             width: 48px;
             height: 24px;
             background: #1db395;
@@ -24,4 +24,19 @@
             color: #fff;
         }
     }
+    .giftWrapperBox{
+        padding-top: 30px;
+        padding-bottom: 15px;
+        width: 440px;
+        background: #FFFFFF;
+        border-radius: 6px;
+    }
+    .divideLine{
+        margin-top: 20px;
+        padding-bottom: 15px;
+        width: 100%;
+        height: 0;
+        border-top: 1px dashed #e7e7e7;
+    }
 }
+
