--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -607,6 +607,16 @@
     background: #FFFFFF;
     border-radius: 0px 0px 10px 0px;
 
+
+    .giftCountTips {
+        display: flex;
+        align-items: center;
+        // margin-left: 8px;
+        .cardLevelTreeIcon {
+            margin-left: 8px;
+        }
+    }
+
     .wxCouponTips {
         height: 36px;
         padding-left: 13px;
