--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -1694,6 +1694,22 @@
     .cardWrap(@deepOrange);
 }
 
+.cardWrap_30 {
+    .cardWrap(@shallowOrange);
+}
+
+.cardWrap_31 {
+    .cardWrap();
+}
+
+.cardWrap_32 {
+    .cardWrap(@deepOrange);
+}
+
+.cardWrap_33 {
+    .cardWrap(@deepOrange);
+}
+
 .priceInputSingle {
     :global {
 
@@ -2763,6 +2779,11 @@
 }
 
 .generateBatchGiftsHeader {
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    margin: 5px 0;
+    border-radius: 3px;
+    height: 75px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -2945,7 +2966,7 @@
 .stepOneDisabled {
     position: absolute;
     height: 500px;
-    width: 590px;
+    width: 650px;
     z-index: 100;
     cursor: not-allowed;
 }
