活动管理、礼品信息页面去掉营销日历横幅广告栏

--- a/src/containers/SpecialPromotionNEW/MySpecialActivities/mySpecialActivities.less
+++ b/src/containers/SpecialPromotionNEW/MySpecialActivities/mySpecialActivities.less
@@ -97,6 +97,7 @@
 
 // 卡片样式
 .cardSaleActive {
+    margin-top: 16px;
     .paginationBox {
         :global {
             .ant-pagination-options {
