--- a/src/containers/GiftNew/GiftInfo/PhysicalInterfaceCards/index.less
+++ b/src/containers/GiftNew/GiftInfo/PhysicalInterfaceCards/index.less
@@ -321,6 +321,15 @@
             .ant-select {
                 width: 150px;
             }
+
+            .btn_list_wrap {
+                display: flex;
+                margin-top: 10px;
+
+                .btn-item {
+                    margin-right: 10px;
+                }
+            }
         }
 
         .ant-calendar-picker {
@@ -330,14 +339,17 @@
         .table_wrap {
             margin-top: 15px;
 
-            // .ant-table-thead>tr>th.ant-table-selection-column {
-            //     padding: 10px;
-            //     width: auto;
-            // }
+            .ant-table-thead>tr>th.ant-table-selection-column {
+                padding: 0 10px;
+                width: auto;
+            }
 
-            // .ant-table-thead>tr>th.ant-table-selection-column,
-            // .ant-table-tbody>tr>td.ant-table-selection-column {
-            //     width: auto;
+            .ant-table-thead>tr>th.ant-table-selection-column,
+            .ant-table-tbody>tr>td.ant-table-selection-column {
+                width: auto;
+            }
+            // .ant-table-thead > tr > th.ant-table-selection-column {
+            //     padding: 0 10px;
             // }
         }
     }
