--- a/src/containers/GiftNew/GiftInfo/PhysicalInterfaceCards/index.less
+++ b/src/containers/GiftNew/GiftInfo/PhysicalInterfaceCards/index.less
@@ -339,15 +339,15 @@
         .table_wrap {
             margin-top: 15px;
 
-            .ant-table-thead>tr>th.ant-table-selection-column {
-                padding: 0 10px;
-                width: auto;
-            }
+            // .ant-table-thead>tr>th.ant-table-selection-column {
+            //     padding: 0 10px;
+            //     width: auto;
+            // }
 
-            .ant-table-thead>tr>th.ant-table-selection-column,
-            .ant-table-tbody>tr>td.ant-table-selection-column {
-                width: auto;
-            }
+            // .ant-table-thead>tr>th.ant-table-selection-column,
+            // .ant-table-tbody>tr>td.ant-table-selection-column {
+            //     width: auto;
+            // }
             // .ant-table-thead > tr > th.ant-table-selection-column {
             //     padding: 0 10px;
             // }
