--- a/src/containers/PromotionDecoration/style.less
+++ b/src/containers/PromotionDecoration/style.less
@@ -240,6 +240,53 @@
     padding: 45px 0 0 75px;
     position: relative;
 
+    .ExpasionGiftWrapper{
+        position: absolute;
+        left: 92px;
+        top: 120px;
+        width: 287px;
+        height: 550px;
+        background: rgba(0,0,0,0.5);
+        z-index: 10;
+        .imgWrapper{
+            width: 125px;
+            height: 111px;
+            border-radius: 5px;
+            overflow: hidden;
+            width: 220px;
+            height: 160px;
+            top: 160px;
+            left: 30px;
+            position: absolute;
+            background-color: rgb(250,243,207);
+            img{
+                width: 100%;
+                height: 70px;
+            }
+            .contentWrapper{
+                text-align: center;
+                .text{
+                    text-align: center;
+                    line-height: 50px;
+                }
+                .shareBtn{
+                    display: inline-block;
+                    width: 160px;
+                    height: 26px;
+                    line-height: 26px;
+                    border-radius: 13px;
+                }
+            }
+        }
+        .closeBtn{
+            color: #fff;
+            font-size: 30px;
+            position: absolute;
+            bottom: 180px;
+            left: 115px;
+        }
+    }
+
     .scrollTip {
         position: absolute;
         top: 20px;
