--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -990,6 +990,12 @@
         vertical-align: bottom;
     }
 
+    .disCountFormItemStyle {
+        display: flex;
+        align-items: center;
+        margin-right: 10px;
+    }
+
     .explainBack {
         :global {
             .ant-form-explain {
