--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -2557,6 +2557,25 @@
             flex: 1;
         }
     }
+    .goodsSelectedBox {
+        position: relative;
+            width: 134px;
+            height: 28px;
+            /* line-height: 26px; */
+            border: 1px solid #d9d9d9;
+            text-align: center;
+            border-radius: 4px;
+            cursor: pointer;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            padding: 0 10px;
+
+        > span {
+            position: absolute;
+            right: 5px;
+        }
+    }
 
     :global {
         .ant-table-tbody > tr > td, .ant-table-thead > tr > th {
