限时秒杀组件

--- a/src/containers/SaleActives/SeckillInLimitedTime/AddSeckillGoods/styles.less
+++ b/src/containers/SaleActives/SeckillInLimitedTime/AddSeckillGoods/styles.less
@@ -9,10 +9,26 @@
         border-radius: 3px;
         border: 1px solid #e7e7e7;
         margin-right: 8px;
+        border-radius: 5px;
+        .changeGiftType{
+            height: 48px;
+            border-bottom: 1px solid #e7e7e7;
+            margin-bottom: 15px;
+            .moveIcon{
+                margin-top: 9px;
+                width: 14px;
+            }
+            .giftTypeBox{
+                position: relative;
+                top: 6px;
+                display: inline-block;
+                margin-left: 15px;
+            }
+        }
         > span {
             display: inline-block;
             position: absolute;
-            top: 23px;
+            top: 63px;
             left: 21px;
             width: 48px;
             height: 24px;
