--- a/src/containers/SaleActives/SeckillInLimitedTime/styles.less
+++ b/src/containers/SaleActives/SeckillInLimitedTime/styles.less
@@ -12,6 +12,7 @@
         cursor: not-allowed;
     }
     .logoGroupHeader {
+        width: 674px;
         padding-left: 11px;
         height: 28px;
         line-height: 28px;
