适用商品适用店铺

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -3071,6 +3071,16 @@
         position: relative;
         top: -6px;
     }
+    .multilineTexts {
+        width: 100px;
+        line-height: 20px;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
+        overflow: hidden;
+        white-space: normal;
+        text-align: left;
+    }
     :global {
         .ant-switch-checked {
             &:after {
