--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -3074,12 +3074,10 @@
     .multilineTexts {
         width: 100px;
         line-height: 20px;
-        display: -webkit-box;
-        -webkit-box-orient: vertical;
-        -webkit-line-clamp: 3;
-        overflow: hidden;
         white-space: normal;
         text-align: left;
+        height: 60px;
+        overflow-y: auto;
     }
     :global {
         .ant-switch-checked {
