--- a/src/containers/SaleActives/NewPromotionCardPages/components/style.less
+++ b/src/containers/SaleActives/NewPromotionCardPages/components/style.less
@@ -94,7 +94,8 @@
     :global {
         .ant-spin-nested-loading {
             width: 401px;
-            margin-left: 15px;
+            // margin-left: 15px;
+            margin-bottom: 10px;
         }
     }
 }
@@ -105,5 +106,49 @@
             margin-right: 17px;
             overflow: visible !important;
         }
+    }
+}
+
+.OnSaleNoShareBenifit {
+    position: relative;
+    height: 80px;
+    padding: 5px;
+    width: 401px;
+    // height: 98px;
+    background: #FFFFFF;
+    border-radius: 4px;
+    border: 1px solid #E7E7E7;
+    // overflow: hidden;
+    text-align: center;
+    margin-bottom: 10px;
+    .iconAddMore {
+        position: absolute;
+        right: -24px;
+        font-size: 20px;
+        top: -5px;
+        cursor: pointer;
+    }
+    .item {
+        margin: 3px;
+    }
+    .projectTag{
+        text-align: left;
+        display: inline-block;
+        :global{
+            .ant-tag{
+                margin-top: 7px!important;
+            }
+        }
+      }
+    .proXz {
+        position: relative;
+        text-align: left;
+        max-height: 100px;
+        overflow-y: auto;
+    }
+
+    .proRBtn1{
+        line-height: 25px;
+        margin-top:17px;
     }
 }
