魏家适用店铺多选

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -2576,6 +2576,13 @@
             right: 5px;
         }
     }
+    .moreTreeSelect  {
+        :global {
+            .ant-select-selection--multiple {
+                overflow: auto !important;
+            }
+        }
+    }
 
     :global {
         .ant-table-tbody > tr > td, .ant-table-thead > tr > th {
