--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -3079,11 +3079,10 @@
         top: -6px;
     }
     .multilineTexts {
-        width: 100px;
         line-height: 20px;
         white-space: normal;
         text-align: left;
-        height: 60px;
+        max-height: 60px;
         overflow-y: auto;
     }
     :global {
