限时秒杀功能完善

--- a/src/containers/SaleActives/SeckillInLimitedTime/AddSeckillGoods/styles.less
+++ b/src/containers/SaleActives/SeckillInLimitedTime/AddSeckillGoods/styles.less
@@ -2,21 +2,36 @@
     display: flex;
     margin-bottom: 16px;
     .addGiftsConntet {
-        width: 480px;
+        width: 466px;
         position: relative;
-        padding: 0 20px 14px;
+        padding: 24px 20px 14px;
         background: #f9f9f9;
         border-radius: 3px;
         border: 1px solid #e7e7e7;
         margin-right: 8px;
         border-radius: 5px;
         .changeGiftType{
-            height: 48px;
-            border-bottom: 1px solid #e7e7e7;
-            margin-bottom: 15px;
+            position: absolute;
+            width: 66px;
+            height: 26px;
+            left: -1px;
+            top: 0;
+            background: #1bb496;
+            color: #fff;
+            line-height: 28px;
+            border-bottom-right-radius: 12px;
+            cursor: grab;
+            span{
+                margin-left: 3px;
+                position: relative;
+                top: -1px;
+                left: 2px;
+            }
             .moveIcon{
-                margin-top: 9px;
-                width: 14px;
+                float: left;
+                margin-top: 5px;
+                margin-left: 7px;
+                width: 8px;
             }
             .giftTypeBox{
                 position: relative;
