减免配送费

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -3461,3 +3461,37 @@
       margin-right: 10px;
     }
   }
+
+  .shippingFeesInfo_orderAmount {
+    padding: 13px 16px;
+    background: #f2f2f2;
+    border: 1px solid #dcdcdc;
+    border-radius: 4px;
+    margin-left: 138px;
+  }
+
+  .shippingFeesInfoBox {
+    position: relative;
+    .freeAmountBox {
+        position: absolute;
+        right: 48px;
+        top: -44px;
+    }
+    .useCountMaxLimitBox {
+        position: absolute;
+        right: 48px;
+        top: -44px;
+    }
+    :global {
+        .ant-form {
+            .ant-form-item {
+                &:nth-child(3) {
+                    padding: 0;
+                }
+                &:nth-child(5) {
+                    padding: 0;
+                }
+            }
+        }
+    }
+  }
