--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -3491,6 +3491,9 @@
                 &:nth-child(5) {
                     padding: 0;
                 }
+                &:nth-child(7) {
+                    padding: 0;
+                }
             }
         }
     }
