--- a/src/containers/SaleActives/SeckillInLimitedTime/AddSeckillGoods/styles.less
+++ b/src/containers/SaleActives/SeckillInLimitedTime/AddSeckillGoods/styles.less
@@ -54,6 +54,13 @@
             font-size: 12px;
             color: #fff;
         }
+        .couponName{
+            max-width: 130px;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+            float: left;
+        }
     }
     .giftWrapperBox{
         padding-top: 30px;
