券包列表过滤

--- a/src/containers/SaleActives/SeckillInLimitedTime/AddSeckillGoods/styles.less
+++ b/src/containers/SaleActives/SeckillInLimitedTime/AddSeckillGoods/styles.less
@@ -29,9 +29,9 @@
             }
             .moveIcon{
                 float: left;
-                margin-top: 5px;
+                margin-top: 6px;
                 margin-left: 7px;
-                width: 8px;
+                width: 7px;
             }
             .giftTypeBox{
                 position: relative;
@@ -55,6 +55,7 @@
             color: #fff;
         }
         .couponName{
+            margin-right: 5px;
             max-width: 130px;
             text-overflow: ellipsis;
             overflow: hidden;
