--- a/src/containers/SaleActives/BenefitCardBargain/styles.less
+++ b/src/containers/SaleActives/BenefitCardBargain/styles.less
@@ -27,5 +27,10 @@
   overflow: auto;
   min-width: 700px;
   width: 100%;
-  display: flex
+  display: flex;
+  .tips {
+    color: #999999;
+    margin-top: -7px;
+    line-height: 12px;
+  }
 }
