--- a/src/containers/SaleActives/BenefitCardBargain/styles.less
+++ b/src/containers/SaleActives/BenefitCardBargain/styles.less
@@ -34,3 +34,16 @@
     line-height: 12px;
   }
 }
+
+.ActiveRulesBox {
+  position: relative;
+  .conditionListBoxPop {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    background: rgba(0, 0, 0, 0.05);
+}
+}
