--- a/src/containers/SaleActives/BenefitCardBargain/styles.less
+++ b/src/containers/SaleActives/BenefitCardBargain/styles.less
@@ -38,11 +38,11 @@
 .ActiveRulesBox {
   position: relative;
   .conditionListBoxPop {
-    width: 100%;
+    width: 85%;
     height: 100%;
     position: absolute;
     top: 0;
-    left: 0;
+    left: 42px;
     z-index: 2;
     background: rgba(0, 0, 0, 0.05);
 }
