--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -1050,6 +1050,18 @@
              position: absolute;
          }
      }
+     .priceTypeWrapper{
+        width: 120px;
+        display: inline-block;
+        :global{
+            .ant-select-enabled{
+                width: 70px;
+                margin-right: 5px;
+                margin-left: 5px;
+            }
+        }
+    }
+
  }
  
  .foodCount {
@@ -3634,4 +3646,27 @@
          }
      }
    }
- 
+.logoGroupHeader {
+    position: relative;
+    margin: 10px 0 10px 10px;
+    padding-left: 12px;
+    width: 551px;
+    height: 28px;
+    line-height: 28px;
+    background: #fff;
+    font-size: 14px;
+    color: #666;
+    font-weight: bold;
+    left: 0;
+    &::before {
+        content: '';
+        margin-left: -7px;
+        position: absolute;
+        display: block;
+        width: 3px;
+        height: 12px;
+        left: 8px;
+        top: 8px;
+        background-color: #18B495;
+    }
+}
