编辑秒杀活动礼品不能编辑

--- a/src/containers/SaleActives/SeckillInLimitedTime/AddSeckillGoods/styles.less
+++ b/src/containers/SaleActives/SeckillInLimitedTime/AddSeckillGoods/styles.less
@@ -78,4 +78,10 @@
         border-top: 1px dashed #e7e7e7;
     }
 }
+.stepOneDisabled{
+    position: absolute;
+    width: 100%;
+    cursor: not-allowed;
+    z-index: 9;
+}
 
